diesel_compile_tests/tests/fail/derive/associations_without_belongs_to.rs
#[macro_use]
extern crate diesel;

#[derive(Associations)]
struct User {
    id: i32,
}

fn main() {}
